--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,66 @@
+/** @format */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--xernerx-grey: #2e3035;
+	--xernerx-black: #1b1d21;
+	--xernerx-purple: #8879f0;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+}
+
+header {
+	position: relative;
+	background-color: var(--xernerx-black);
+	color: var(--xernerx-purple);
+	box-shadow: 0, 0, 2px, 2px, rgba(0, 0, 0, 0.4);
+}
+
+.rainbow {
+	width: 100%;
+	height: 0.5vh;
+	background-repeat: repeat-x;
+	background: linear-gradient(to right, #eb5252, #f78f2f, #f4c151, #75d850, #6284ff, #eb5252);
+	animation: rainbow 10s linear infinite;
+	background-size: 200% 100%;
+	position: absolute;
+	bottom: 0;
+	box-shadow: 2px 2px 4px 4px rgba(0, 0, 0, 0.4);
+}
+
+@keyframes rainbow {
+	0% {
+		background-position: 0;
+	}
+	100% {
+		background-position: 800% 0;
+	}
+}
+
+.icon-clr {
+	filter: invert(100%);
+}
+
+header {
+	height: 5vh;
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.space {
+	display: flex;
+	justify-content: space-between;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+	position: relative;
+	background-color: var(--xernerx-grey);
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.icon {
+	height: 35px;
 }
