--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,9 +10,6 @@
 	--xernerx-purple: #8879f0;
 }
 
-@media (prefers-color-scheme: dark) {
-}
-
 header {
 	position: fixed;
 	width: 100%;
@@ -32,7 +29,7 @@ main {
 }
 
 input {
-	width: 15%;
+	min-width: 20%;
 	background-color: var(--xernerx-black);
 	padding: 5px;
 	border-radius: 5px;
@@ -52,7 +49,7 @@ button {
 	width: 100%;
 	height: 0.5vh;
 	background-repeat: repeat-x;
-	background: linear-gradient(to right, #eb5252, #f78f2f, #f4c151, #75d850, #6284ff, #eb5252);
+	background: linear-gradient(to right, #ff0000, #ffa500, #ffff00, #008000, #0000ff, #4b0082, #ee82ee, #ff0000);
 	animation: rainbow 10s linear infinite;
 	background-size: 200% 100%;
 	position: absolute;
@@ -83,6 +80,32 @@ button {
 .content {
 	margin-left: 10%;
 	padding: 10px;
+	width: 100%;
+}
+
+@keyframes rainbowText {
+	from {
+		color: #ff0000;
+	}
+	10% {
+		color: #ffa500;
+	}
+	33% {
+		color: #ffff00;
+	}
+	50% {
+		color: #008000;
+	}
+	66% {
+		color: #4b0082;
+	}
+	75% {
+		color: #ee82ee;
+	}
+
+	100% {
+		color: #0000ff;
+	}
 }
 
 @keyframes rainbow {
@@ -96,6 +119,89 @@ button {
 
 .icon-clr {
 	filter: invert(100%);
+}
+
+.rb {
+	animation: rainbowText 100s linear 0s infinite;
+}
+
+#loading {
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	z-index: 100;
+}
+.loader {
+	transform: rotateZ(45deg);
+	perspective: 1000px;
+	border-radius: 50%;
+	width: 48px;
+	height: 48px;
+	animation: rainbowText 1s linear 0s infinite;
+}
+.loader:before,
+.loader:after {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: inherit;
+	height: inherit;
+	border-radius: 50%;
+	transform: rotateX(70deg);
+	animation: 1s spin linear infinite;
+}
+.loader:after {
+	color: #000000;
+	transform: rotateY(70deg);
+	animation-delay: 0.4s;
+}
+
+@keyframes rotate {
+	0% {
+		transform: translate(-50%, -50%) rotateZ(0deg);
+	}
+	100% {
+		transform: translate(-50%, -50%) rotateZ(360deg);
+	}
+}
+
+@keyframes rotateccw {
+	0% {
+		transform: translate(-50%, -50%) rotate(0deg);
+	}
+	100% {
+		transform: translate(-50%, -50%) rotate(-360deg);
+	}
+}
+
+@keyframes spin {
+	0%,
+	100% {
+		box-shadow: 0.2em 0px 0 0px currentcolor;
+	}
+	12% {
+		box-shadow: 0.2em 0.2em 0 0 currentcolor;
+	}
+	25% {
+		box-shadow: 0 0.2em 0 0px currentcolor;
+	}
+	37% {
+		box-shadow: -0.2em 0.2em 0 0 currentcolor;
+	}
+	50% {
+		box-shadow: -0.2em 0 0 0 currentcolor;
+	}
+	62% {
+		box-shadow: -0.2em -0.2em 0 0 currentcolor;
+	}
+	75% {
+		box-shadow: 0px -0.2em 0 0 currentcolor;
+	}
+	87% {
+		box-shadow: 0.2em -0.2em 0 0 currentcolor;
+	}
 }
 
 h1 {
@@ -118,6 +224,11 @@ h2,
 h3,
 h4 {
 	font-weight: bold;
+}
+
+a:hover {
+	cursor: pointer;
+	animation: rainbowText 10s linear 0s infinite;
 }
 
 .grid-list {
@@ -165,6 +276,202 @@ body {
 	height: 45px;
 }
 
+.link-icon {
+	height: 40px;
+	padding: 10px;
+}
+
 .banner {
 	width: 100%;
+}
+
+.tile {
+	background-color: var(--xernerx-black);
+	border-radius: 0.5rem;
+	padding: 10px;
+	margin: 5px;
+	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
+}
+
+#page-title {
+	padding: 30px;
+	text-shadow: 1px 1px 2px black, 0 0 1em white, 0 0 0.2em white;
+}
+
+.center {
+	height: 15rem;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.readme {
+	margin: 5px;
+	width: 100%;
+}
+
+.eyes {
+	position: relative;
+	width: 108px;
+	display: flex;
+	justify-content: space-between;
+}
+.eyes::after,
+.eyes::before {
+	content: '';
+	display: inline-block;
+	width: 48px;
+	height: 48px;
+	background-color: #fff;
+	background-image: radial-gradient(circle 14px, #0d161b 100%, transparent 0);
+	background-repeat: no-repeat;
+	border-radius: 50%;
+	animation: eyeMove 10s infinite, blink 10s infinite;
+}
+@keyframes eyeMove {
+	0%,
+	10% {
+		background-position: 0px 0px;
+	}
+	13%,
+	40% {
+		background-position: -15px 0px;
+	}
+	43%,
+	70% {
+		background-position: 15px 0px;
+	}
+	73%,
+	90% {
+		background-position: 0px 15px;
+	}
+	93%,
+	100% {
+		background-position: 0px 0px;
+	}
+}
+@keyframes blink {
+	0%,
+	10%,
+	12%,
+	20%,
+	22%,
+	40%,
+	42%,
+	60%,
+	62%,
+	70%,
+	72%,
+	90%,
+	92%,
+	98%,
+	100% {
+		height: 48px;
+	}
+	11%,
+	21%,
+	41%,
+	61%,
+	71%,
+	91%,
+	99% {
+		height: 18px;
+	}
+}
+
+.dots {
+	color: #fff;
+	display: inline-block;
+	position: relative;
+	font-size: 48px;
+	font-family: Arial, Helvetica, sans-serif;
+	box-sizing: border-box;
+}
+.dots::after {
+	content: '';
+	width: 5px;
+	height: 5px;
+	background: currentColor;
+	position: absolute;
+	bottom: 10px;
+	right: -5px;
+	box-sizing: border-box;
+	animation: animloader 1s linear infinite;
+}
+
+@keyframes animloader {
+	0% {
+		box-shadow: 10px 0 rgba(255, 255, 255, 0), 20px 0 rgba(255, 255, 255, 0);
+	}
+	50% {
+		box-shadow: 10px 0 white, 20px 0 rgba(255, 255, 255, 0);
+	}
+	100% {
+		box-shadow: 10px 0 white, 20px 0 white;
+	}
+}
+
+.pkg-info {
+	background-color: var(--xernerx-black);
+	padding: 15px;
+	border-radius: 0.5rem;
+	box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.4);
+	height: max-content;
+	width: 35%;
+}
+
+th {
+	text-align: left;
+}
+td {
+	padding-left: 10px;
+}
+
+.mob-disclaimer {
+	visibility: hidden;
+}
+
+@media only screen and (max-width: 768px) {
+	header {
+		width: 98%;
+	}
+
+	.sidebar {
+		width: 5rem;
+	}
+
+	.content {
+		margin-left: 5rem;
+	}
+
+	.icon {
+		height: 38px;
+	}
+
+	.banner {
+		width: 100%;
+	}
+
+	.readme {
+		visibility: hidden;
+	}
+
+	.pkg-info {
+		position: absolute;
+		width: 70%;
+	}
+
+	.mob-disclaimer {
+		visibility: visible;
+		color: red;
+	}
+
+	h1 {
+		font-size: x-large;
+	}
+
+	h2 {
+		font-size: larger;
+	}
 }
